create .env example file
